--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,16 @@
+apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: 'java'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'org.codehaus.groovy:groovy-all:2.2.2'
+
+    testCompile "org.spockframework:spock-core:0.7-groovy-2.0"
+}
